--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "blog-portfolio-website",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Personal blog & portfolio website using Gatsby",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
