--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "gatsby": "^2.1.27",
     "gatsby-plugin-typography": "^2.2.8",
+    "gatsby-source-filesystem": "^2.0.23",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-typography": "^0.16.19",
