--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby": "^2.1.27",
     "gatsby-plugin-typography": "^2.2.8",
     "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-transformer-remark": "^2.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-typography": "^0.16.19",
