--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "gatsby": "^2.1.27",
     "gatsby-plugin-manifest": "^2.0.22",
+    "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-typography": "^2.2.8",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.1",
+    "netlify-cms": "^2.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-typography": "^0.16.19",
