--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,6 +11,7 @@ collections:
     folder: src/pages/blog
     create: true
     fields:
+      - { name: path, label: Path, widget: string }
       - { name: title, label: Title, widget: string }
       - { name: date, label: Date, widget: date }
       - { name: description, label: Description, widget: text, required: false }
