--- a/package.json
+++ b/package.json
@@ -13,19 +13,28 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.1.27",
     "gatsby-plugin-manifest": "^2.0.24",
     "gatsby-plugin-netlify-cms": "^3.0.12",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.9",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-styled-components": "^3.0.7",
     "gatsby-plugin-typography": "^2.2.8",
+    "gatsby-remark-design-system": "^2.0.0",
+    "gatsby-remark-prismjs": "^3.2.5",
     "gatsby-source-filesystem": "^2.0.23",
     "gatsby-transformer-remark": "^2.3.1",
+    "lodash": "^4.17.11",
     "netlify-cms": "^2.6.0",
+    "prismjs": "^1.15.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
+    "react-icons": "^3.5.0",
     "react-typography": "^0.16.19",
+    "styled-components": "^4.1.3",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
   },
