--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,3 +16,17 @@ collections:
       - { name: date, label: Date, widget: date }
       - { name: description, label: Description, widget: text, required: false }
       - { name: body, label: Body, widget: markdown }
+  - name: Projects
+    label: Projects
+    folder: src/pages/projects
+    create: true
+    fields:
+      - { name: path, label: Path, widget: string }
+      - { name: title, label: Title, widget: string }
+      - { name: date, label: Date, widget: date }
+      - { name: description, label: Description, widget: text }
+      - { name: image, label: image, widget: image }
+      - { name: gif, label: gif, widget: image }
+      - { name: demo, label: demo, widget: text }
+      - { name: source, label: source, widget: text }
+      - { name: body, label: Body, widget: markdown }
