--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^3.5.0",
     "react-images": "^0.5.19",
     "react-typography": "^0.16.19",
+    "sharp": "^0.22.0",
     "styled-components": "^4.1.3",
     "typography": "^0.16.19",
     "typography-theme-fairy-gates": "^0.16.19"
