--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^3.5.0",
     "react-images": "^0.5.19",
+    "react-tooltip": "^3.10.0",
     "react-typography": "^0.16.19",
     "sharp": "^0.22.0",
     "styled-components": "^4.1.3",
